=============
Grr Changelog
=============

Nov-11-2006 Yen-Ju Chen <yjchenx at gmail>
	* Speed up starting by avoid rebuild internal cache frequently.
	* Display main window after everything is properly set up.
	* Font preferences (on Cocoa only for now).

Nov-10-2006 Yen-Ju Chen <yjchenx at gmail>
	* Save frames.
	* Clean up FetchProgressManager in prepare for improvement.
	* Deselect articles when feed changes.
	* Use timer and queue to schedule feed fetching.
	* Work on GNUstep.
	* Improve speed by reducing updating internal articles cache.
	* Use autorelease pool on heavy process to reduce memory usage.
	* Speed up deleting old articles.

Nov-09-2006 Yen-Ju Chen <yjchenx at gmail>
	* Use PKPane for Log.
	* Automatically clean up articles older than user defaults.
	* Work on GNUstep.
	* Let user assign which web browser to use (only on GNUstep).
	* Make sure it work on Cocoa.

Nov-08-2006 Yen-Ju Chen <yjchenx at gmail>
	* Adapt PaneKit for preferences.

Nov-06-2006 Yen-Ju Chen <yjchenx at gmail>
 	* "Main Window" menu item.
	* Display progress of fetching.
	* Spped up -markAllRead: and -markAllUnread:.
	* Work on GNUstep.

Nov-05-2006 Yen-Ju Chen <yjchenx at gmail>

	* Open link with enter key.
	* Remove HTML tag (temporary fix).
	* Open link with firefox as default.
	* Cache browser.

Nov-4-2006  Guenther Noack <guenther at unix-ag.uni-kl.de>

	* Fixed compile issue on FreeBSD (link using -lCollectionKit)
	* Removed NSCoding methods from RSSReaderFeed (I took that out
	  of RSSKit, too) 
 
Oct-30-2006 Yen-Ju Chen <yjchenx at gmail>

	* Merge back from branch.

Oct-28-2006 Yen-Ju Chen <yjchenx at gmail>

	* Fix bug when window is closed before application terminates.
	* Support searching.
	* Use Gorm file for main user interface again.
	* Use Nib file on Cocoa.
	* Implement article marking.
	* Display number of unread articles.
	* Update Gorm file for article marking.
	* Sort article by date.
	* Save window frame.

Oct-27-2006 Yen-Ju Chen <yjchenx at gmail>
