@@ -6,6 +6,7 @@ Nov-11-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Speed up starting by avoid rebuild internal cache frequently.
 	* Display main window after everything is properly set up.
 	* Font preferences (on Cocoa only for now).
+	* Automatically get feed from pasteboard.
 
 Nov-10-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Save frames.
